# AI-

./: .gitignore  README.md  index.html
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
assets/: index-L5N9rTcX.js  index-TEeJbmiT.css
backend/: .env.example  app.py  cache_manager.py  config.py  index.py  middleware.py  pdf_parser.py  pyproject.toml  requirements.txt  resume_extractor.py  resume_matcher.py  serverless.yml  utils.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css
