[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-analyzer"
version = "1.1.0"
description = "AI-powered intelligent resume analysis system"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Resume Analyzer Team" },
]
keywords = ["resume", "ai", "nlp", "pdf-parsing", "job-matching"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "flask>=3.0,<4.0",
    "flask-cors>=4.0,<5.0",
    "PyMuPDF>=1.23.0,<2.0",
    "openai>=1.0.0,<2.0",
    "redis>=5.0,<6.0",
    "python-dotenv>=1.0,<2.0",
    "werkzeug>=3.0,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "flake8>=7.0",
    "black>=24.0",
]

[tool.setuptools.packages.find]
where = ["."]
